--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         }
     ],
     "require": {
+        "php": ">=5.3.0",
+        "ext-gd": "*",
         "rickselby/nbt": "^1.0"
     },
     "autoload": {
